--- a/lab11/CMakeLists.txt
+++ b/lab11/CMakeLists.txt
@@ -2,4 +2,5 @@ project(lab11)
 add_executable(lab11 main_11.cpp Student.cpp Student.h GraduationDao.cpp GraduationDao.h
         StudentService.h
         StudentServiceImpl.cpp
-        StudentServiceImpl.h)
+        StudentServiceImpl.h
+)
